# qs

./: .gitignore  Cargo.toml  README.md
crates/qs-cli/: Cargo.toml
crates/qs-cli/src/: main.rs
crates/qs-core/: Cargo.toml
crates/qs-core/src/: config.rs  consts.rs  discover.rs  embed.rs  extract.rs  index.rs  lib.rs  parse.rs  search.rs  storage.rs
