[workspace]
resolver = "2"
members = ["crates/qs-core", "crates/qs-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# core crate
qs-core = { path = "crates/qs-core" }

anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
syntect = "5"
tokio = { version = "1.0", features = ["full"] }
fastembed = "4"
blake3 = "1.5"

# qdrant-edge - internal crates from qdrant repo
# note: These are git dependencies pointing to specific paths in the qdrant monorepo
edge = { git = "https://github.com/qdrant/qdrant.git", branch = "dev", package = "edge" }
segment = { git = "https://github.com/qdrant/qdrant.git", branch = "dev", package = "segment" }
shard = { git = "https://github.com/qdrant/qdrant.git", branch = "dev", package = "shard" }