[package]
name = "qs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for qs - semantic filesystem search"

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true

# File system
ignore.workspace = true

# Embeddings
fastembed.workspace = true

# Hashing
blake3.workspace = true

# Tree-sitter for code parsing
tree-sitter = "0.24"
tree-sitter-rust = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }

# Qdrant Edge
edge.workspace = true
segment.workspace = true
shard.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
default = []
rs = ["dep:tree-sitter-rust"]
python = ["dep:tree-sitter-python"]
javascript = ["dep:tree-sitter-javascript", "dep:tree-sitter-typescript"]
typescript = ["dep:tree-sitter-typescript"]
go = ["dep:tree-sitter-go"]
java = ["dep:tree-sitter-java"]
c = ["dep:tree-sitter-c"]
cpp = ["dep:tree-sitter-cpp"]